--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+	<table>
+		<thead>
+			<tr>
+				<th>Roll number</th>
+				<th>Name</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>12</td>
+				<td>Akshat</td>
+			</tr>
+			<tr>
+				<td>11</td>
+				<td>Yatendra</td>
+			</tr>
+		</tbody>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
